--- a/django/djreact/static/css/style.css
+++ b/django/djreact/static/css/style.css
@@ -1,8 +1,13 @@
+body {
+  background-color: rgb(190,196,255);
+}
+
 .card {
   width: 100%;
-  border: 1px solid blue;
+  box-shadow: 0px 0px 12px rgb(58,63,106);
   padding: 40px;
   border-radius: 10px;
   margin: 25px 10px;
   height: 45vh;
+  background-color: #ffffff;
 }
