--- a/django/djreact/static/css/style.css
+++ b/django/djreact/static/css/style.css
@@ -8,6 +8,17 @@ body {
   padding: 40px;
   border-radius: 10px;
   margin: 25px 10px;
-  height: 45vh;
+  height: 300px;
   background-color: #ffffff;
+}
+
+.widget-label {
+  position: relative;
+  top: 0;
+}
+
+.vertical-center {
+  position: relative;
+  top: 40%;
+  transform: translateY(-50%);
 }
