--- a/django/djreact/static/css/style.css
+++ b/django/djreact/static/css/style.css
@@ -36,15 +36,18 @@ body {
   background-color: rgb(135,244,188);
   color: #000000;
   font-size: 12px;
-  padding: 5px;
+  padding: 8px;
 }
 .btn-group .btn-custom:hover {
+  background-color: rgb(181,249,214);
+}
+.btn-group .btn-custom-active {
   height: 30px;
   line-height: 0px;
   background-color: rgb(181,249,214);
   color: #000000;
   font-size: 12px;
-  padding: 5px;
+  padding: 8px;
 }
 
 .weather-data {
