--- a/django/djreact/static/css/style.css
+++ b/django/djreact/static/css/style.css
@@ -2,6 +2,10 @@ body {
   background-color: rgb(190,196,255);
 }
 
+.hidden {
+  display: none;
+}
+
 .card {
   width: 100%;
   box-shadow: 0px 0px 12px rgb(58,63,106);
